crates/keron-lang/tests/corpus/errors/check/fn_reconcile_body.keron
val target: Symlink = symlink(source = "b", target = "a")

fn install(): Void {
  reconcile target
}

fn install_if(flag: Boolean): Void {
  if flag {
    reconcile target
  }
}
